# ChangeLog for kde-misc/tellico
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.81 2009/02/22 22:17:31 carlo Exp $

  22 Feb 2009; Carsten Lohrke <carlo@gentoo.org> tellico-1.3.5.ebuild:
  Trivial homepage change, bug #259755.

  22 Feb 2009; Carsten Lohrke <carlo@gentoo.org> tellico-1.3.5.ebuild:
  Trivial homepage change, bug #259755.

*tellico-1.3.5 (15 Feb 2009)

  15 Feb 2009; Carsten Lohrke <carlo@gentoo.org>
  +files/tellico-1.3.5-test-ldadd.diff, +tellico-1.3.5.ebuild:
  Version bump. Get rid of invalid aRts dependency. Missing kde.eclass
  function calls.

*tellico-1.3.4 (06 Dec 2008)

  06 Dec 2008; Patrick Lauer <patrick@gentoo.org> +tellico-1.3.4.ebuild:
  Bump

*tellico-1.3.3 (26 Jul 2008)

  26 Jul 2008; Timo Gurr <tgurr@gentoo.org>
  +files/tellico-1.3-releaseflaws.patch, -tellico-1.2.10.ebuild,
  -tellico-1.2.11.ebuild, +tellico-1.3.3.ebuild:
  Version bump, thanks everyone at bug #210714.

  30 Jun 2008; nixnut <nixnut@gentoo.org> tellico-1.2.14.ebuild:
  Stable on ppc wrt bug 216755

  30 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> tellico-1.2.14.ebuild:
  amd64 stable, bug #216755

  30 Jun 2008; Raúl Porcel <armin76@gentoo.org> tellico-1.2.14.ebuild:
  sparc stable wrt #216755

  30 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  tellico-1.2.14.ebuild:
  stable x86, bug 216755

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> tellico-1.2.10.ebuild,
  tellico-1.2.11.ebuild, tellico-1.2.14.ebuild:
  Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206528.

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -tellico-1.2.13.ebuild:
  Old.

*tellico-1.2.14 (24 Sep 2007)

  24 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/tellico-1.2.14-disable_formattest.patch, +tellico-1.2.14.ebuild:
  Version bump to 1.2.14.

*tellico-1.2.13 (04 Aug 2007)

  04 Aug 2007; Steve Dibb <beandog@gentoo.org> +tellico-1.2.13.ebuild: