@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/tellico
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.81 2009/02/22 22:17:31 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/tellico/ChangeLog,v 1.82 2009/09/10 13:43:22 ssuominen Exp $
+
+*tellico-2.0_pre2 (10 Sep 2009)
+
+  10 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
+  +tellico-2.0_pre2.ebuild:
+  Version bump.
 
   22 Feb 2009; Carsten Lohrke <carlo@gentoo.org> tellico-1.3.5.ebuild:
   Trivial homepage change, bug #259755.
